--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-Hello Github Page!
+<!DOCTYPE html>
+<html>
+	<head>
+		<title> suho Lee - resume </title>
+		<meta charset="UTF-8" />
+		<meta name="description" content="Resume for Jobs" />
+		<meta name="keywords" content="Resume, Programmer, Programming, C#, C++, Python" />
+		<meta name="author" content="Suho Lee" />
+		<link rel="stylesheet" href="/css/resume.css" />
+	</head>
+	<body>
+		<h1> suho Lee </h1>
+		<p>
+			Hyundai I-Park Hometown Apt. Ssangyong 2-dong, Seobuk-gu, Cheonan-Si, Chungcheongnam-do, South Korea </br>
+			+81) 10-4785-6967 </br>
+			devwbg@hitagi.moe
+		</p>
+		<h2> entry Level Programmer </h2>
+	</body>
+</html>
