--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="keywords" content="Resume, Programmer, Programming, C#, C++, Python" />
 		<meta name="author" content="Suho Lee" />
 		<link rel="stylesheet" href="/css/resume.css" />
+		<link href='http://fonts.googleapis.com/css?family=EB+Garamond' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<h1> suho Lee </h1>
